# zkvm-ethereum-mpt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: stateless_validation.rs
crates/benchmarks/src/: lib.rs
crates/mpt/: Cargo.toml
crates/mpt/src/mpt/: children.rs  mod.rs  node.rs
crates/ref-mpt/: Cargo.toml
crates/ref-mpt-state/: Cargo.toml
crates/ref-mpt-state/src/: lib.rs
crates/ref-mpt/src/: lib.rs
crates/ref-mpt/src/trie/: children.rs  display.rs  get.rs  hash.rs  insert.rs  mod.rs  remove.rs  reveal.rs  rlp.rs  trie.rs
crates/simple-sparse-state/: Cargo.toml
crates/simple-sparse-state/src/: lib.rs
crates/simple-trie/: Cargo.toml
crates/simple-trie/src/: lib.rs
crates/simple-trie/src/trie/: children.rs  get.rs  hash.rs  insert.rs  mod.rs  nodes.rs  remove.rs  reveal.rs  trie.rs
crates/sparsestate/: Cargo.toml
crates/sparsestate/src/: lib.rs
crates/zeth-mpt/: Cargo.toml
crates/zeth-mpt-state/: Cargo.toml
crates/zeth-mpt-state/src/: lib.rs
crates/zeth-mpt/src/: lib.rs
crates/zeth-mpt/src/mpt/: orphan.rs  rlp.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential_hashbuilder.rs  differential_ref_zeth.rs  rlp_roundtrip.rs  zeth_variable_keys.rs
tests/: Cargo.toml
tests/src/: lib.rs
