[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
ref-mpt-state = { path = "../crates/ref-mpt-state" }
stateless.workspace = true
reth-evm-ethereum.workspace = true
reth-chainspec.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
serde_json = "1.0"

[lints]
workspace = true
