[package]
name = "ref-mpt-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]

alloy-primitives.workspace = true
alloy-trie.workspace = true
reth-errors.workspace = true
reth-stateless.workspace = true
reth-revm.workspace = true
reth-trie-common.workspace = true
ref-mpt = { path = "../ref-mpt" }

[dev-dependencies]
alloy-consensus = { version = "1.0.42", default-features = false }
reth-primitives-traits.workspace = true

[lints]
workspace = true

