[package]
name = "ref-mpt-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]

alloy-primitives.workspace = true
alloy-trie.workspace = true
stateless.workspace = true
revm-bytecode.workspace = true
reth-trie-common.workspace = true
ref-mpt = { path = "../ref-mpt" }

[dev-dependencies]
alloy-consensus.workspace = true
reth-primitives-traits.workspace = true

[lints]
workspace = true
