[package]
name = "ref-mpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { version = "1.3", default-features = false }
alloy-trie = { version = "0.8.0", default-features = false }
alloy-rlp = { version = "0.3.8", default-features = false }

[lints]
workspace = true
