[package]
name = "simple-sparse-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]

alloy-primitives.workspace = true
alloy-trie.workspace = true
reth-errors.workspace = true
reth-stateless.workspace = true
reth-revm.workspace = true
reth-trie-common.workspace = true
simple-trie = { path = "../simple-trie" }

[dev-dependencies]
alloy-consensus = { version = "1.0.42", default-features = false }
guest-libs.workspace = true
reth-evm-ethereum.workspace = true
reth-chainspec.workspace = true
reth-primitives-traits.workspace = true
anyhow = "1.0"
sparsestate = { path = "../sparsestate" }

[lints]
workspace = true


