[package]
name = "sparsestate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { version = "1.5", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }

mpt = { path = "../mpt" }

[lints]
workspace = true
