[package]
name = "zeth-mpt-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-trie.workspace = true
alloy-rlp.workspace = true

reth-errors.workspace = true
reth-stateless.workspace = true
reth-trie-common.workspace = true
reth-revm.workspace = true

zeth-mpt = { path = "../zeth-mpt" }

[lints]
workspace = true
