[package]
name = "zeth-mpt-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-trie.workspace = true
alloy-rlp.workspace = true
stateless.workspace = true
revm-bytecode.workspace = true
reth-trie-common.workspace = true

zeth-mpt = { path = "../zeth-mpt" }

[lints]
workspace = true
